fix: last slide link was overlapping active slide link

--- a/css/main.css
+++ b/css/main.css
@@ -252,12 +252,16 @@ figcaption {
   background-size: cover;
   background-position: center;
   opacity: 0;
-  transition: opacity 1.5s ease-in-out;
+  visibility: hidden;
+  transition: opacity 1.5s ease-in-out, visibility 0s 1.5s;
   display: flex;
   align-items: center;
 }
 .hero__slide--active {
+  z-index: 2;
   opacity: 1;
+  visibility: visible;
+  transition: opacity 1.5s ease-in-out, visibility 0s 0s;
 }
 @media only screen and (min-width: 768px) {
   .hero__slide {
@@ -272,6 +276,7 @@ figcaption {
 .hero__content {
   width: 1200px;
   margin: 0 auto;
+  z-index: 3;
 }
 .hero__title {
   color: var(--brand);
